# aleph-node

baby-liminal-extension/src/: lib.rs  substrate.rs
docker/: Dockerfile  docker_entrypoint.sh
finality-aleph/: Cargo.toml
pallet/: Cargo.toml
pallets/baby-liminal/: Cargo.toml
pallets/baby-liminal/src/: lib.rs  systems.rs
poseidon/: Cargo.toml
poseidon/src/: circuit.rs  generate_parameters.rs  hash.rs
primitives/: Cargo.toml
relations/: Cargo.toml
relations/benches/: bench.rs
relations/src/: environment.rs  linear.rs  serialization.rs  xor.rs
relations/src/preimage/: mod.rs  tests.rs
relations/src/shielder/: deposit.rs  deposit_and_merge.rs  merge.rs  mod.rs  note.rs  token_amount_var.rs  types.rs  vote.rs  withdraw.rs
scripts/: run_nodes.sh
