[package]
name = "liminal-ark-poseidon"
version = "0.1.0"
edition = "2021"
authors = ["Cardinal"]
documentation = "https://docs.rs/liminal-ark-poseidon"
readme = "README.md"
homepage = "https://alephzero.org"
license = "Apache-2.0"
categories = ["cryptography"]
repository = "https://github.com/Cardinal-Cryptography/aleph-node"
description = "An instantiation of the Poseidon SNARK-friendly hash function."

[dependencies]
ark-bls12-381 = { version = "^0.4.0" }
ark-ff = { version = "^0.4.0", default-features = false }
ark-r1cs-std = { version = "^0.4.0", default-features = false, optional = true }
ark-relations = { version = "^0.4.0", default-features = false, optional = true }
paste = { version = "1.0.11" }

ark-crypto-primitives = { version = "0.4.0", default-features = false, features = [
    "r1cs",
    "sponge",
] }
liminal-ark-pnbr-poseidon-parameters = { git = "https://github.com/Yithis/poseidon377.git", package = "liminal-ark-pnbr-poseidon-parameters", default-features = false }
liminal-ark-pnbr-poseidon-permutation = { git = "https://github.com/Yithis/poseidon377.git", package = "liminal-ark-pnbr-poseidon-permutation", default-features = false }

# For generation only
liminal-ark-pnbr-poseidon-paramgen = { git = "https://github.com/Yithis/poseidon377.git", package = "liminal-ark-pnbr-poseidon-paramgen", optional = true }

[lib]
name = "liminal_ark_poseidon"

[[bin]]
name = "liminal-ark-poseidon-paramgen"
path = "src/generate_parameters.rs"
required-features = ["paramgen"]

[features]
default = ["std"]
std = [
    "ark-bls12-381/std",
    "ark-ff/std",

    "ark-crypto-primitives/std",

    "liminal-ark-pnbr-poseidon-parameters/std",
    "liminal-ark-pnbr-poseidon-permutation/std",
]
circuit = ["ark-r1cs-std", "ark-relations"]
circuit-std = ["circuit", "std", "ark-r1cs-std/std", "ark-relations/std"]
paramgen = ["std", "liminal-ark-pnbr-poseidon-paramgen/std"]
