[package]
name = "liminal-ark-relations"
version = "0.4.0"
edition = "2021"
authors = ["Cardinal"]
documentation = "https://docs.rs/?"
homepage = "https://alephzero.org"
license = "Apache-2.0"
categories = ["cryptography"]
repository = "https://github.com/Cardinal-Cryptography/aleph-node"
description = "An instantiation of the Poseidon SNARK-friendly hash function."

[dependencies]
liminal-ark-poseidon = { version = "0.1.0", default-features = false, path = "../poseidon" }
liminal-ark-relation-macro = { version = "0.1.3", path = "src/proc_macro" }
paste = { version = "1.0.11" }

ark-bls12-381 = { version = "^0.4.0", default-features = false }
ark-ff = { version = "^0.4.0", default-features = false }
ark-relations = { version = "^0.4.0", default-features = false }
ark-serialize = { version = "^0.4.0", default-features = false }
ark-std = { version = "^0.4.0", default-features = false }
saver = { git = "https://github.com/Yithis/crypto.git", branch = "aleph-saver", package = "saver", default-features = false }

# Required for computation in a circuit.
ark-crypto-primitives = { version = "^0.4.0", default-features = false, features = [
    "r1cs",
], optional = true }
ark-ec = { version = "^0.4.0", default-features = false, optional = true }
ark-ed-on-bls12-381 = { version = "^0.4.0", default-features = false, features = [
    "r1cs",
], optional = true }
ark-groth16 = { version = "^0.4.0", default-features = false, optional = true }
ark-poly = { version = "^0.4.0", default-features = false, optional = true }
ark-poly-commit = { version = "^0.4.0", default-features = false, optional = true }
ark-snark = { version = "^0.4.0", default-features = false, optional = true }
ark-r1cs-std = { version = "^0.4.0", default-features = false, optional = true }
blake2 = { version = "0.10.6", default-features = false, optional = true }
sha2 = { version = "0.10.7", default-features = false }

[dev-dependencies]
criterion = "0.5.1"
tracing = { version = "0.1", default-features = false, features = [
    "attributes",
] }
tracing-subscriber = { version = "0.2" }

[[bench]]
name = "bench"
harness = false

[features]
default = ["circuit-std"]
std = [
    "ark-bls12-381/std",
    "ark-ff/std",
    "ark-relations/std",
    "ark-relations/tracing-subscriber",
    "ark-serialize/std",
    "ark-std/std",

    "liminal-ark-relation-macro/std",
]
circuit = [
    "ark-crypto-primitives",
    "ark-ec",
    "ark-ed-on-bls12-381",
    "ark-groth16",
    "ark-poly",
    "ark-poly-commit",
    "ark-snark",
    "ark-r1cs-std",
    "blake2",
    "liminal-ark-poseidon/circuit",
]
circuit-std = [
    "circuit",
    "std",
    "ark-crypto-primitives/std",
    "ark-ec/std",
    "ark-ed-on-bls12-381/std",
    "ark-groth16/std",
    "ark-poly/std",
    "ark-poly-commit/std",
    "ark-r1cs-std/std",
    "blake2/std",
    "liminal-ark-poseidon/circuit-std",
]
